--- a/index.Rmd
+++ b/index.Rmd
@@ -2,29 +2,130 @@
 title: "Portfolio"
 author: "Roos Hutter"
 date: "2023-02-22"
-output: html_document
+output: 
+  flexdashboard::flex_dashboard:
+    storyboard: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(flexdashboard)
+library(readr)
+library(leaflet)
+library(DT)
+library(tidyverse)
+library(lubridate)
+library(plotly)
+library(spotifyr)
+library(Cairo)
+
+Sys.setenv(SPOTIFY_CLIENT_ID = 'c6d2017616c34106a1b1c8407f7fbc6e')
+Sys.setenv(SPOTIFY_CLIENT_SECRET = '1bee2b2375da4f9a9332a114d31d0da7')
+access_token <- get_spotify_access_token()
+
+otra1 <- get_playlist_audio_features("", "6cZQQaJ0MsSHyUfGyuLgGK")
+
+otra_j <- otra1 %>%
+  filter(added_by.id == '1153531084') %>%
+  mutate(added_by.id = "Julia")
+
+otra_w <- otra1 %>%
+  filter(added_by.id == '1168120441') %>%
+  mutate(added_by.id = "Willemijn")
+
+otra_r <- otra1 %>%
+  filter(added_by.id == 'roos.hutter') %>%
+  mutate(added_by.id = "Roos")
+
+otra <- rbind(head(otra_r, 52), otra_w, head(otra_j, 52))
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+### Introduction
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+For this computational musicological analysis I'm going to use a shared playlist between my sisters and I, called 'On the road (again)'. This playlist was used on vacation last year to combine our different tastes in music. Therefore the focus will be on the differences and similarities between the songs each of us put in the playlist. I think it will be interesting to analyze the different genres of the songs. Additionally, the energy the songs have is an interesting aspect to look more into. Because they are my sister, I already have some speculations about these differences. However, it still will be worth looking into. I expect the artists and release dates of the songs the be different. Also, the similarities between the songs will be interesting to discover. Since this playlist was made to listen to during car rides, I expect the songs to have somewhat of a similar sound. Furthermore, my sisters and I do influence each other’s music taste a little bit. I hope to discover more about who influences who and in what way exactly.
+```{r}
 
-```{r cars}
-summary(cars)
+
 ```
 
-## Including Plots
+### Visualisation
 
-You can also embed plots, for example:
+```{r}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+ggplot(otra, aes(x = valence, y = energy)) + 
+  geom_jitter() + 
+  geom_smooth() +
+  facet_wrap(~ added_by.id) +
+  labs(x = "Valence", y = "Energy") +
+  theme_light()
+
+otra_mean_median <- otra %>%
+  group_by(added_by.id) %>%
+  summarize(mean_energy = mean(energy),
+            mean_valence = mean(valence),
+            mean_acousticness = mean(acousticness),
+            mean_loudness = mean(loudness),
+            mean_tempo = mean(loudness),
+            median_energy = median(energy),
+            median_valence = median(valence),
+            median_acousticness = median(acousticness),
+            median_loudness = median(loudness),
+            median_tempo = median(tempo))
+
+ggplot(otra, aes(x=added_by.id, y=acousticness)) +
+  geom_boxplot() +
+  labs(x = '', y = "Acousticness") +
+  theme_light()
+
+otra |>                    # Start with awards.
+  mutate(
+    mode = ifelse(mode == 0, "Minor", "Major")
+  ) |>
+  ggplot(                     # Set up the plot.
+    aes(
+      x = valence,
+      y = energy,
+      size = loudness,
+      colour = mode
+    )
+  ) +
+  geom_point() +              # Scatter plot.
+  geom_rug(linewidth = 0.1) + # Add 'fringes' to show data distribution.
+  facet_wrap(~ added_by.id) +    # Separate charts per playlist.
+  scale_x_continuous(         # Fine-tune the x axis.
+    limits = c(0, 1),
+    breaks = c(0, 0.50, 1),   # Use grid-lines for quadrants only.
+    minor_breaks = NULL       # Remove 'minor' grid-lines.
+  ) +
+  scale_y_continuous(         # Fine-tune the y axis in the same way.
+    limits = c(0, 1),
+    breaks = c(0, 0.50, 1),
+    minor_breaks = NULL
+  ) +
+  scale_colour_brewer(        # Use the Color Brewer to choose a palette.
+    type = "qual",            # Qualitative set.
+    palette = "Paired"        # Name of the palette is 'Paired'.
+  ) +
+  scale_size_continuous(      # Fine-tune the sizes of each point.
+    trans = "exp",            # Use an exp transformation to emphasise loud.
+    guide = "none"            # Remove the legend for size.
+  ) +
+  theme_light() +             # Use a simpler theme.
+  labs(                       # Make the titles nice.
+    x = "Valence",
+    y = "Energy",
+    colour = "Mode",
+    title = "On the road (again) analysis"
+  )
+
+
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+### Conclusion
+
+```{r}
+
+
+
+```
