--- a/index.Rmd
+++ b/index.Rmd
@@ -41,6 +41,26 @@ otra_r <- otra1 %>%
 
 otra <- rbind(head(otra_r, 52), otra_w, head(otra_j, 52))
 ```
+# Introduction
+
+Column {data-width=800}
+-----------------------------------------------------------------------
+
+### Introduction to the 'On the road (again)' corpus 
+For this computational musicological analysis I'm going to use a shared playlist between my sisters and I, called 'On the road (again)'. Down below you can see a picture of Julia, Willemijn and me (Roos). This playlist was used on vacation last year to combine our different tastes in music. Therefore the focus will be on the differences and similarities between the songs each of us put in the playlist. I think it will be interesting to analyze the different genres of the songs. Additionally, the energy the songs have is an interesting aspect to look more into. Because they are my sister, I already have some speculations about these differences. However, it still will be worth looking into. I expect the artists and release dates of the songs the be different. Also, the similarities between the songs will be interesting to discover. Since this playlist was made to listen to during car rides, I expect the songs to have somewhat of a similar sound. Furthermore, my sisters and I do influence each others music taste a little bit. I hope to discover more about who influences who and in what way exactly.
+
+Column {data-width=200}
+-----------------------------------------------------------------------
+### Julia
+![](Julia.jpeg){width=150} 
+
+### Willemijn
+![](Willemijn.png){width=150} 
+
+### Roos
+![](Roos.jpeg){width=150}
+
+# Visualisations {.storyboard}
 
 ### Chroma vs Timbre of Acid Tears - Culi.
 ```{r}
@@ -100,22 +120,10 @@ plot_at_timbre <-
   scale_fill_viridis_c() +                              
   theme_classic()
 
-fig <- subplot(plot_at_chroma, plot_at_timbre) %>% 
-  layout(title = 'Chroma and Timbre of Acid Tears - Culi.')
-fig
+subplot(plot_at_chroma, plot_at_timbre) 
 ```
 *** 
 These plots show the chroma (left) and timbre (right) of the song 'Acid Tears' by 'Culi.'. It was added by me. The song is pretty consistent till about 2.45. This is shown well in the chromagram, at 165 the chroma changes. Before this point it was mostly C#, and after it is higher and switches between A#, G#, F# and F. This switch is also seen in the timbre, at the end the c02 is present.
-
-### Introduction to the 'On the road (again)' corpus 
-For this computational musicological analysis I'm going to use a shared playlist between my sisters and I, called 'On the road (again)'. Down below you can see a picture of Julia, Willemijn and me (Roos). This playlist was used on vacation last year to combine our different tastes in music. Therefore the focus will be on the differences and similarities between the songs each of us put in the playlist. I think it will be interesting to analyze the different genres of the songs. Additionally, the energy the songs have is an interesting aspect to look more into. Because they are my sister, I already have some speculations about these differences. However, it still will be worth looking into. I expect the artists and release dates of the songs the be different. Also, the similarities between the songs will be interesting to discover. Since this playlist was made to listen to during car rides, I expect the songs to have somewhat of a similar sound. Furthermore, my sisters and I do influence each others music taste a little bit. I hope to discover more about who influences who and in what way exactly.
-
-***
-![Julia](Julia.jpeg){width=150} 
-
-![Willemijn](Willemijn.png){width=150} 
-
-![Roos](Roos.jpeg){width=150}
 
 ### Visualisation of the Acousticness
 
@@ -241,7 +249,7 @@ list(list(x = 0.5,  y = 1.0,
     yref = "paper",  
     xanchor = "center",  
     yanchor = "bottom",  
-    showarrow = FALSE ),        list(x = 0.5, y = 0.45,  
+    showarrow = FALSE ),        list(x = 0.5, y = 0.46,  
           text = "Crazy Little Thing Called Love - Remastered 2011 - Queen",   
     xref = "paper",  
     yref = "paper",  
@@ -253,3 +261,5 @@ list(list(x = 0.5,  y = 1.0,
 
 ***
 These are two chromagrams of the same song 'Crazy Little Thing Called Love', however one is sung by Maroon 5 and the other by Queen. The one from Maroon 5 is added by me and the one from Queen is added by Julia. In the beginning, the Maroon 5 one is a lot in pitch class A and Queen is a lot in D. However, around 50 there is a similar pattern in pitch class E for both songs. 
+
+# Conclusion
